@@ -554,7 +554,7 @@ module Rufus::Tokyo
     #
     #   :numoreq # number which is equal to at least one token
     #
-    def add (colname, operator, val, affirmative=true, no_index=true)
+    def add (colname, operator, val, affirmative=true, no_index=false)
 
       op = operator.is_a?(Fixnum) ? operator : OPERATORS[operator]
       op = op | TDBQCNEGATE unless affirmative
