@@ -2,6 +2,12 @@
 = rufus-tokyo CHANGELOG.txt
 
 
+== rufus-tokyo - 0.1.14    not yet released
+
+- issue #2 : query#add with no_index=false by default
+- issue #1 : added query#delete and table#query_delete
+
+
 == rufus-tokyo - 0.1.13    released 2009/06/02
 
 - todo  : putkeep implementation (by Kamal)
